--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "test": "ember test"
   },
   "devDependencies": {
-    "babel-eslint": "^8.0.2",
     "@ember/optional-features": "^0.7.0",
     "@glimmer/component": "^0.14.0-alpha.3",
+    "babel-eslint": "^8.0.2",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.2.20",
     "ember-cli": "github:ember-cli/ember-cli#c5beec19967bfa3e97eae6ebbd521006c967d420",
@@ -40,12 +40,14 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-qunit": "^4.1.2",
     "ember-resolver": "^5.1.3",
+    "ember-simple-auth": "^1.8.2",
     "ember-source": "https://s3.amazonaws.com/builds.emberjs.com/canary/shas/da551b3f0978bf81f8ae81cbfc33255523c7018f.tgz",
     "ember-welcome-page": "^3.2.0",
     "eslint-plugin-ember": "^6.0.1",
     "eslint-plugin-node": "^8.0.1",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.8.0"
+    "qunit-dom": "^0.8.0",
+    "torii": "^0.10.1"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
